# qwen3-tts-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
qwen3_tts_cli/: __init__.py  main.py
